--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "NODE_ENV=env/.env.development next dev",
     "build": "NODE_ENV=env/.env.development next build",
     "start": "next start",
+    "check": "npm run format && npm run eslint",
+    "eslint": "eslint --ext .jsx,.js components/ pages/",
+    "format": "prettier -w . !.next/**",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,7 +26,10 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1"
   }
 }
